--- a/pages/main/tablet.scss
+++ b/pages/main/tablet.scss
@@ -13,7 +13,7 @@
       width: 18px;
       height: 18px;
       padding: 7px;
-      background: url("../../assets/icons/burger_menu.png") no-repeat center;
+      background: url('../../assets/icons/burger_menu.png') no-repeat center;
       cursor: pointer;
       &:hover {
         & > * {
@@ -78,7 +78,7 @@
     justify-content: left;
     margin: 15px 0 -50px;
     padding: 3px 21px;
-    background: url("../../assets/images/flower_foto1.png") no-repeat right -58px;
+    background: url('../../assets/images/flower_foto1.png') no-repeat right -58px;
     img {
       display: none;
     }
@@ -103,11 +103,11 @@
     }
   }
   .pets {
-    gap: 16px;
     height: 972px;
+    background-image: url('../../assets/images/palm_foto.png'),
+      url('../../assets/images/strelitzia 1.png');
     background-size: 130px, 172px;
-    background-image: url("../../assets/images/palm_foto.png"),
-      url("../../assets/images/strelitzia 1.png");
+    gap: 16px;
     .content {
       position: relative;
       .arrow {
@@ -120,9 +120,9 @@
         }
       }
       .cards-container {
-        row-gap: 88px;
         overflow: hidden;
         height: 800px;
+        row-gap: 88px;
         grid-template-columns: auto auto;
         .card {
           .image-container {
@@ -144,16 +144,41 @@
     }
   }
   .pick-a-ffriend {
+    padding: 20px 0 22px;
     .content {
       h2 {
         font-size: 42px;
         line-height: 50px;
+        margin-block: 10px 28px;
+      }
+      h3 {
+        margin-top: 10px;
       }
       .text {
+        padding: 0 5px 0 20px;
         h4 {
           font-size: 22px;
           line-height: 26px;
         }
+      }
+      .icons {
+        position: relative;
+        figure {
+          top: -18px;
+          left: -6px;
+          margin-inline: 20px;
+        }
+        & > img {
+          position: absolute;
+          top: -18px;
+          right: 182px;
+        }
+        img:first-of-type {
+          left: 152px;
+        }
+      }
+      button {
+        margin: 82px auto 0px;
       }
     }
   }
