--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -27,6 +27,7 @@
 body {
   margin: 0px;
   box-sizing: border-box;
+  min-width: 1600px;
   font-family: "Roboto";
   text-align: left;
   letter-spacing: 0em;
@@ -73,6 +74,9 @@ body {
 }
 .header nav span {
   cursor: pointer;
+}
+.header nav span:hover {
+  color: orange;
 }
 
 .pet_story {
