--- a/pages/donate/style.scss
+++ b/pages/donate/style.scss
@@ -7,7 +7,7 @@
 body {
   margin: 0px;
   box-sizing: border-box;
-  // width: 1600px;
+  min-width: 1600px;
   font-family: "Roboto";
   text-align: left;
   letter-spacing: 0em;
@@ -48,6 +48,9 @@ body {
     }
     span {
       cursor: pointer;
+      &:hover {
+        color: orange;
+      }
     }
   }
 }
