feat: add responsive 640px

--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -127,6 +127,7 @@ body {
 }
 .pick-a-feed .content .text h3 {
   margin: 36px 0 0;
+  color: white;
   font-size: 36px;
   line-height: 47px;
   font-weight: 400;
