--- a/pages/donate/style.scss
+++ b/pages/donate/style.scss
@@ -96,6 +96,7 @@ body {
       @include btn;
       h3 {
         margin: 36px 0 0;
+        color: #ffff;
         @include h3;
       }
       p {
