--- a/pages/main/tablet.scss
+++ b/pages/main/tablet.scss
@@ -1,8 +1,49 @@
 @media screen and (max-width: 640px) {
   .header {
     max-height: 34px;
+    &.opened-menu {
+      color: orange;
+      background: #fff;
+      .pet_story {
+        border: 1px solid;
+        top: 20px;
+        z-index: 1;
+        left: 10px;
+        h1 {
+          font-size: 15px;
+          line-height: 18px;
+        }
+      }
+    }
     .wrapper_header {
       padding-inline: 3px;
+      position: relative;
+    }
+    .menu-container {
+      transition: transform 0.5s ease 0s;
+      padding-block: 50px;
+      gap: 18px;
+      transform: scaleY(0);
+      transform-origin: center top;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      background: #fff;
+      color: #000;
+      height: 329px;
+      display: flex;
+      flex-direction: column;
+      & > * {
+        padding-inline: 20px;
+      }
+      nav {
+        flex-direction: column;
+        justify-content: space-around;
+        margin: 0;
+        align-items: flex-start;
+        text-align: left;
+      }
     }
     .pet_story {
       border: none;
@@ -24,30 +65,8 @@
       padding: 7px;
       background: url("../../assets/icons/burger_menu.png") no-repeat center;
       cursor: pointer;
-      &:hover {
-        & > * {
-          transform: scaleY(1);
-        }
-      }
-      & > * {
-        position: absolute;
-        top: 100%;
-        left: -80px;
-        display: flex;
-        flex-direction: column;
-        transform: scaleY(0);
-        transition: transform 0.5s;
-        height: 170px;
-        padding: 10px;
-        background: #000;
-        transform-origin: top;
-        nav {
-          flex-direction: column;
-          justify-content: space-evenly;
-          align-items: flex-start;
-          margin: 0;
-          text-align: left;
-        }
+      &.opened-menu {
+        background: url("../../assets/icons/x_icon.png") no-repeat center;
       }
     }
   }
@@ -103,9 +122,8 @@
   }
   .pets {
     height: 972px;
-    background-image: url("../../assets/images/palm_foto.png"),
-      url("../../assets/images/strelitzia 1.png");
-    background-size: 130px, 172px;
+    background-position: -57px bottom, right bottom;
+    background-size: 190px, 172px;
     gap: 16px;
     .content {
       position: relative;
@@ -242,6 +260,14 @@
         justify-self: end;
       }
     }
+  }
+  #overlay {
+    top: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba($color: gray, $alpha: 0.8);
   }
 }
 
