--- a/pages/donate/tablet.css
+++ b/pages/donate/tablet.css
@@ -5,8 +5,49 @@
   .header {
     max-height: 34px;
   }
+  .header.opened-menu {
+    color: orange;
+    background: #fff;
+  }
+  .header.opened-menu .pet_story {
+    border: 1px solid;
+    top: 20px;
+    z-index: 1;
+    left: 10px;
+  }
+  .header.opened-menu .pet_story h1 {
+    font-size: 15px;
+    line-height: 18px;
+  }
   .header .wrapper_header {
     padding-inline: 3px;
+    position: relative;
+  }
+  .header .menu-container {
+    transition: transform 0.5s ease 0s;
+    padding-block: 50px;
+    gap: 18px;
+    transform: scaleY(0);
+    transform-origin: center top;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: #fff;
+    color: #000;
+    height: 329px;
+    display: flex;
+    flex-direction: column;
+  }
+  .header .menu-container > * {
+    padding-inline: 20px;
+  }
+  .header .menu-container nav {
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 0;
+    align-items: flex-start;
+    text-align: left;
   }
   .header .pet_story {
     border: none;
@@ -29,28 +70,8 @@
     background: url("../../assets/icons/burger_menu.png") no-repeat center;
     cursor: pointer;
   }
-  .header .menu:hover > * {
-    transform: scaleY(1);
-  }
-  .header .menu > * {
-    position: absolute;
-    top: 100%;
-    left: -80px;
-    display: flex;
-    flex-direction: column;
-    transform: scaleY(0);
-    transition: transform 0.5s;
-    height: 170px;
-    padding: 10px;
-    background: #000;
-    transform-origin: top;
-  }
-  .header .menu > * nav {
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    margin: 0;
-    text-align: left;
+  .header .menu.opened-menu {
+    background: url("../../assets/icons/x_icon.png") no-repeat center;
   }
   .back-image {
     height: 335px;
@@ -141,6 +162,14 @@
   footer .wrapper .author {
     margin: -8px 0 0px 0;
     justify-self: end;
+  }
+  #overlay {
+    top: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(128, 128, 128, 0.8);
   }
 }
 @media screen and (min-width: 321px) and (max-width: 640px) {
