--- a/pages/donate/mobile.scss
+++ b/pages/donate/mobile.scss
@@ -18,27 +18,29 @@
   }
   .back-image {
     height: 187px;
-    background-size: 735px;
     background-position: -135px -87px;
+    background-size: 735px;
   }
   .pick-a-feed {
     padding: 1px 10px 0;
     .content {
+      padding-bottom: 24px;
       h3 {
         font-size: 24px;
         line-height: 29px;
       }
       .inside-window {
         margin-top: 29px;
+        padding-bottom: 6px;
         h2 {
           font-size: 24px;
           line-height: 29px;
           margin-block: 14px 16px;
         }
         p {
+          width: 100%;
           font-size: 16px;
           line-height: 22px;
-          width: 100%;
         }
         .image-box {
           margin: 0;
@@ -50,14 +52,14 @@
               line-height: 32px;
             }
             div {
+              width: 102%;
               font-size: 9px;
               line-height: 12px;
-              width: 102%;
             }
           }
           .number + img {
-            width: 8px;
             margin-top: 14px;
+            width: 8px;
           }
           img:last-child {
             width: 158px;
@@ -71,15 +73,39 @@
               left: 0;
             }
             .bar {
-              gap: 53px;
               height: 14px;
+              padding-inline: 16px;
+              gap: 53px;
+              &::before {
+                top: 6px;
+                margin-inline: 5px;
+              }
+              input:checked ~ img {
+                padding: 3px;
+                outline-offset: 2px;
+                border-width: 1px;
+                outline-width: 1px;
+              }
               label {
                 img {
                   width: 5px;
                 }
+                .amount {
+                  top: 23px;
+                  font-size: 13px;
+                  line-height: 18px;
+                }
               }
             }
           }
+          input[type="number"] {
+            margin-top: 49px;
+            width: 168px;
+            height: 38px;
+          }
+        }
+        p:last-child {
+          width: 101%;
         }
       }
     }
@@ -96,8 +122,8 @@
         gap: 29px;
       }
       .pet_story {
-        width: auto;
         border: none;
+        width: auto;
         img {
           top: 13px;
           left: 71px;
@@ -106,9 +132,9 @@
       nav {
         order: 4;
         ul {
-          gap: 31px;
           justify-content: s;
           margin-right: 8px;
+          gap: 31px;
         }
       }
       .author {
