--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -385,44 +385,6 @@ body {
   justify-content: center;
   gap: 30px;
 }
-.testimonials .container .testimonial {
-  border-radius: 20px;
-  width: 264px;
-  height: 387px;
-  padding: 2px;
-  background: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
-}
-.testimonials .container .testimonial > * {
-  border-radius: 20px;
-  padding: 12px 15px 14px 15px;
-  background: #F1F3F2;
-}
-.testimonials .container .testimonial .testim_header {
-  display: inline-flex;
-  gap: 10px;
-}
-.testimonials .container .testimonial .testim_header img {
-  width: 37px;
-  height: 37px;
-}
-.testimonials .container .testimonial .testim_header .name {
-  font-size: 16px;
-  line-height: 22px;
-  font-weight: 500;
-}
-.testimonials .container .testimonial .testim_header .descr {
-  font-size: 15px;
-  line-height: 18px;
-  font-weight: 300;
-}
-.testimonials .container .testimonial p {
-  overflow: hidden;
-  margin: 8px 0;
-  height: 305px;
-  font-size: 15px;
-  line-height: 18px;
-  font-weight: 300;
-}
 .testimonials .progress_wrapper {
   display: inline-flex;
   align-items: center;
@@ -576,6 +538,45 @@ footer .wrapper .author {
 footer ul {
   list-style: none;
   padding-inline: 0px;
+}
+
+.testimonial {
+  border-radius: 20px;
+  width: 264px;
+  height: 387px;
+  padding: 2px;
+  background: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+}
+.testimonial > * {
+  border-radius: 20px;
+  padding: 12px 15px 14px 15px;
+  background: #F1F3F2;
+}
+.testimonial .testim_header {
+  display: inline-flex;
+  gap: 10px;
+}
+.testimonial .testim_header img {
+  width: 37px;
+  height: 37px;
+}
+.testimonial .testim_header .name {
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+}
+.testimonial .testim_header .descr {
+  font-size: 15px;
+  line-height: 18px;
+  font-weight: 300;
+}
+.testimonial p {
+  overflow: hidden;
+  margin: 8px 0;
+  height: 305px;
+  font-size: 15px;
+  line-height: 18px;
+  font-weight: 300;
 }
 
 @-webkit-keyframes menu {
