--- a/pages/main/tablet.css
+++ b/pages/main/tablet.css
@@ -257,11 +257,13 @@
     background: rgba(128, 128, 128, 0.8);
   }
   .popup {
+    position: fixed;
+    top: calc(50% - 214px);
+    left: calc(50% - 160px);
+    -webkit-animation: zoom 0.6s;
+            animation: zoom 0.6s;
     padding: 20px 36px 17px 16px;
     background: #f5f7f6;
-    position: fixed;
-    left: calc(50% - 160px);
-    top: calc(50% - 214px);
   }
   .popup > img {
     position: absolute;
@@ -273,5 +275,21 @@
 @media screen and (min-width: 321px) and (max-width: 640px) {
   body {
     width: 640px;
+  }
+}
+@-webkit-keyframes zoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+@keyframes zoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
   }
 }/*# sourceMappingURL=tablet.css.map */
