--- a/pages/main/tablet.scss
+++ b/pages/main/tablet.scss
@@ -270,11 +270,12 @@
     background: rgba($color: gray, $alpha: 0.8);
   }
   .popup {
+    position: fixed;
+    top: calc(50% - 214px);
+    left: calc(50% - 160px);
+    animation: zoom 0.6s;
     padding: 20px 36px 17px 16px;
     background: #f5f7f6;
-    position: fixed;
-    left: calc(50% - 160px);
-    top: calc(50% - 214px);
     & > img {
       position: absolute;
       top: 14px;
@@ -287,5 +288,13 @@
 @media screen and (min-width: 321px) and (max-width: 640px) {
   body {
     width: 640px;
+  }
+}
+@keyframes zoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
   }
 }
