fix: some backgrounds position

--- a/pages/main/mobile.css
+++ b/pages/main/mobile.css
@@ -13,39 +13,39 @@
     right: 4px;
   }
   .watch-favorite {
-    height: 187px;
     top: 0px;
+    height: 187px;
   }
   .watch-favorite .text {
+    top: 40px;
+    left: 182px;
+    width: 128px;
     font-size: 28px;
     line-height: 21px;
-    width: 128px;
-    left: 182px;
-    top: 40px;
   }
   .watch-favorite .text:before {
-    width: 119px;
-    height: 119px;
     top: -18px;
     left: -18px;
+    width: 119px;
+    height: 119px;
   }
   .watch-favorite .btn_1 {
-    left: calc(50% - 149px);
     top: 206px;
+    left: calc(50% - 149px);
   }
   .backstage {
     padding: 83px 11px 0;
-    background-size: 54px;
     background-position: 266px 31px;
+    background-size: 54px;
   }
   .backstage .text {
     width: auto;
   }
   .backstage .text h2 {
+    margin: 6px 0 9px;
     font-size: 24px;
     line-height: 29px;
     letter-spacing: 0em;
-    margin: 6px 0 9px;
   }
   .backstage .text h4 {
     margin: 18px 0 11px;
@@ -56,16 +56,16 @@
   .pets {
     margin: 30px 0 0;
     height: auto;
-    background-size: 72px, 85px;
     background-position: -13px bottom, 252px bottom;
+    background-size: 72px, 85px;
   }
   .pets .content .arrow {
     display: none;
   }
   .pets .content .cards-container {
+    height: 1400px;
     grid-template-columns: auto;
     gap: 15px;
-    height: 1400px;
   }
   .pets button {
     margin: -9px 0 60px;
@@ -98,13 +98,13 @@
     margin-block: 19px 22px;
   }
   .pick-a-ffriend .content .icons {
-    flex-direction: column;
     right: -5px;
+    flex-direction: column;
     gap: 42px;
   }
   .pick-a-ffriend .content .icons img {
-    right: -36px;
     top: 190px;
+    right: -36px;
   }
   .pick-a-ffriend .content .icons img:first-of-type {
     top: 440px;
@@ -117,15 +117,16 @@
     margin-block: 62px -18px;
   }
   .testimonials {
-    padding: 0 14px;
     height: 580px;
-    background-position-y: 514px;
+    padding: 0 14px;
+    background-position: right 514px;
     background-size: 60px;
+    background-position-y: 514px;
   }
   .testimonials .testim_header {
     position: relative;
-    left: -8px;
     top: -5px;
+    left: -8px;
   }
   .testimonials h3 {
     font-size: 24px;
@@ -150,8 +151,8 @@
     gap: 29px;
   }
   footer .wrapper .pet_story {
-    width: auto;
     border: none;
+    width: auto;
   }
   footer .wrapper .pet_story img {
     top: 13px;
@@ -161,9 +162,9 @@
     order: 4;
   }
   footer .wrapper nav ul {
-    gap: 31px;
     justify-content: s;
     margin-right: 8px;
+    gap: 31px;
   }
   footer .wrapper .author {
     order: 2;
