--- a/pages/main/mobile.scss
+++ b/pages/main/mobile.scss
@@ -17,37 +17,37 @@
     }
   }
   .watch-favorite {
-    height: 187px;
     top: 0px;
+    height: 187px;
     .text {
+      top: 40px;
+      left: 182px;
+      width: 128px;
       font-size: 28px;
       line-height: 21px;
-      width: 128px;
-      left: 182px;
-      top: 40px;
       &:before {
-        width: 119px;
-        height: 119px;
         top: -18px;
         left: -18px;
+        width: 119px;
+        height: 119px;
       }
     }
     .btn_1 {
-      left: calc(50% - 149px);
       top: 206px;
+      left: calc(50% - 149px);
     }
   }
   .backstage {
     padding: 83px 11px 0;
-    background-size: 54px;
     background-position: 266px 31px;
+    background-size: 54px;
     .text {
       width: auto;
       h2 {
+        margin: 6px 0 9px;
         font-size: 24px;
         line-height: 29px;
         letter-spacing: 0em;
-        margin: 6px 0 9px;
       }
       h4 {
         margin: 18px 0 11px;
@@ -60,16 +60,16 @@
   .pets {
     margin: 30px 0 0;
     height: auto;
-    background-size: 72px, 85px;
     background-position: -13px bottom, 252px bottom;
+    background-size: 72px, 85px;
     .content {
       .arrow {
         display: none;
       }
       .cards-container {
+        height: 1400px;
         grid-template-columns: auto;
         gap: 15px;
-        height: 1400px;
       }
     }
     button {
@@ -102,12 +102,12 @@
         margin-block: 19px 22px;
       }
       .icons {
-        flex-direction: column;
         right: -5px;
+        flex-direction: column;
         gap: 42px;
         img {
-          right: -36px;
           top: 190px;
+          right: -36px;
           &:first-of-type {
             top: 440px;
           }
@@ -125,14 +125,15 @@
     }
   }
   .testimonials {
-    padding: 0 14px;
     height: 580px;
-    background-position-y: 514px;
+    padding: 0 14px;
+    background-position: right 514px;
     background-size: 60px;
+    background-position-y: 514px;
     .testim_header {
       position: relative;
-      left: -8px;
       top: -5px;
+      left: -8px;
     }
     h3 {
       font-size: 24px;
@@ -158,8 +159,8 @@
         gap: 29px;
       }
       .pet_story {
-        width: auto;
         border: none;
+        width: auto;
         img {
           top: 13px;
           left: 71px;
@@ -168,9 +169,9 @@
       nav {
         order: 4;
         ul {
-          gap: 31px;
           justify-content: s;
           margin-right: 8px;
+          gap: 31px;
         }
       }
       .author {
