--- a/pages/main/tablet.css
+++ b/pages/main/tablet.css
@@ -193,6 +193,8 @@
   .testimonials {
     height: 668px;
     padding: 0 23px 0 20px;
+    background-position: 508px 530px;
+    background-size: 144px;
   }
   .testimonials h3 {
     margin: 59px 0 31px;
