--- a/pages/main/tablet.scss
+++ b/pages/main/tablet.scss
@@ -202,6 +202,8 @@
   .testimonials {
     height: 668px;
     padding: 0 23px 0 20px;
+    background-position: 508px 530px;
+    background-size: 144px;
     h3 {
       margin: 59px 0 31px;
     }
