--- a/pages/donate/tablet.scss
+++ b/pages/donate/tablet.scss
@@ -3,6 +3,8 @@
     width: 640px;
   }
   .header {
+    position: fixed;
+    top: 0;
     max-height: 34px;
     &.opened-menu {
       background: #fff;
@@ -101,6 +103,7 @@
     }
   }
   .back-image {
+    margin-top: 34px;
     height: 335px;
     background-position: -256px -182px;
     background-size: 1340px 700px;
