--- a/pages/donate/tablet.scss
+++ b/pages/donate/tablet.scss
@@ -1,7 +1,7 @@
 @media screen and (max-width: 640px) {
-  body {
-    width: 640px;
-  }
+  // body {
+  //   width: 640px;
+  // }
   .header {
     position: fixed;
     top: 0;
