--- a/pages/donate/small.css
+++ b/pages/donate/small.css
@@ -1,8 +1,3 @@
-@media screen and (min-width: 1001px) {
-  body {
-    min-width: 1600px;
-  }
-}
 @media screen and (max-width: 1000px) {
   body {
     width: 1000px;
@@ -66,5 +61,10 @@
   }
   footer .wrapper .author {
     margin: 0 0px 6px -84px;
+  }
+}
+@media screen and (min-width: 641px) and (max-width: 1000px) {
+  body {
+    width: 1000px;
   }
 }/*# sourceMappingURL=small.css.map */
