--- a/pages/main/small.css
+++ b/pages/main/small.css
@@ -130,7 +130,7 @@
     margin: 0 0px 6px -84px;
   }
 }
-@media screen and (min-width: 641px) {
+@media screen and (min-width: 641px) and (max-width: 1000px) {
   body {
     width: 1000px;
   }
