--- a/pages/main/small.scss
+++ b/pages/main/small.scss
@@ -152,7 +152,7 @@
     }
   }
 }
-@media screen and (min-width: 641px) {
+@media screen and (min-width: 641px) and (max-width: 1000px) {
   body {
     width: 1000px;
   }
