--- a/pages/main/small.css
+++ b/pages/main/small.css
@@ -95,12 +95,14 @@
   .testimonials h3 {
     margin: 100px auto 29px;
   }
+  .testimonials .wrapper-container {
+    width: 956px;
+  }
   .testimonials .container .testimonial {
-    width: 293px;
     height: 391px;
   }
-  .testimonials .container .testimonial:last-child {
-    display: none;
+  .testimonials .container .testimonial > * {
+    width: 263px;
   }
   .testimonials .progress_wrapper {
     margin-top: 17px;
