feat: add pet & testimonials carousels

--- a/pages/main/mobile.css
+++ b/pages/main/mobile.css
@@ -59,11 +59,14 @@
     background-position: -13px bottom, 252px bottom;
     background-size: 72px, 85px;
   }
+  .pets .cards-wrapper {
+    width: 290px;
+  }
   .pets .content .arrow {
     display: none;
   }
   .pets .content .cards-container {
-    height: 1400px;
+    margin-bottom: 7px;
     grid-template-columns: auto;
     gap: 15px;
   }
