--- a/pages/main/style.scss
+++ b/pages/main/style.scss
@@ -163,11 +163,18 @@ body {
   background-position: left bottom, right bottom;
   background-repeat: no-repeat;
   gap: 82px;
+  .cards-wrapper {
+    display: flex;
+    overflow: hidden;
+    width: 1156px;
+    gap: 80px;
+  }
   button {
     position: static;
     @include round_btn;
   }
   .content {
+    // position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -318,10 +325,10 @@ body {
     height: 391px;
   }
   .container {
-    transition: transform 1s;
     position: absolute;
     display: flex;
     justify-content: center;
+    transition: transform 1s;
     gap: 30px;
   }
   .progress_wrapper {
