--- a/pages/main/style.scss
+++ b/pages/main/style.scss
@@ -346,7 +346,7 @@ body {
       appearance: none;
       &::-webkit-slider-thumb {
         border-radius: 5px;
-        width: 115px;
+        width: 12.5%;
         height: 6px;
         background: orange;
         appearance: none;
