fix: change animetion method

--- a/pages/main/mobile.scss
+++ b/pages/main/mobile.scss
@@ -64,6 +64,7 @@
     background-size: 72px, 85px;
     .cards-wrapper {
       width: 290px;
+      height: 1400px;
     }
     .content {
       .arrow {
