--- a/pages/main/small.scss
+++ b/pages/main/small.scss
@@ -57,6 +57,7 @@
     background-size: 195px, 240px;
     .cards-wrapper {
       width: 940px;
+      height: 800px;
     }
     .content {
       .arrow {
