--- a/pages/donate/style.scss
+++ b/pages/donate/style.scss
@@ -197,6 +197,7 @@ body {
             }
             .amount {
               position: absolute;
+              z-index: 1;
               top: 40px;
               left: -8px;
             }
